Added Java3D 1.6 dependencies, changed the pom.xml configuration and startup scripts to use this new Java3D